syntax = "proto3";

package services.users.v1;

import "com/interfaces/users/v1/user.proto";

message SignupRequest {
    string email = 1;
    string password = 2;
    string name = 3;
    string surname = 4;
    string iban = 5;
}

message SignupResponse {
    com.interfaces.users.v1.ProtoUser user = 1;
    string token = 2;
}